--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -31,3 +32,4 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.0'
 }
 //apply plugin: 'com.google.gms.google-services'
+
