--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,10 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.android.support:design:28.1.0'
 }
 //apply plugin: 'com.google.gms.google-services'
 
