--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.google.firebase:firebase-core:17.2.0'
     implementation 'com.android.support:design:28.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
 //apply plugin: 'com.google.gms.google-services'
 
